samples/http-echo-helm/http-echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniapp
  template:
    metadata:
      labels:
        app: miniapp
    spec:
      containers:
        - name: web
          image: hashicorp/http-echo:1.0
          args:
            - "-text=$(MESSAGE)"
          ports:
            - containerPort: 5678
