samples/http-echo-helm/http-echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniapp
spec:
  selector:
    app: miniapp
  ports:
    - port: 80
      targetPort: 5678
