samples/http-echo-helm/http-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: std-01-01.kubernetes.praktikum-services.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniapp
                port:
                  number: 80
